--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -175,7 +175,7 @@
    "outputs": [],
    "source": [
     "# Drop the non-beneficial ID columns, 'EIN' and 'NAME'.\n",
-    "#  YOUR CODE GOES HERE"
+    "application_df = application_df.drop(columns=['EIN', 'NAME'])"
    ]
   },
   {
@@ -206,7 +206,7 @@
    ],
    "source": [
     "# Determine the number of unique values in each column.\n",
-    "#  YOUR CODE GOES HERE"
+    "print(application_df.nunique())"
    ]
   },
   {
@@ -244,7 +244,8 @@
    ],
    "source": [
     "# Look at APPLICATION_TYPE value counts to identify and replace with \"Other\"\n",
-    "#  YOUR CODE GOES HERE"
+    "app_type_counts = application_df['APPLICATION_TYPE'].value_counts()\n",
+    "print(app_type_counts)"
    ]
   },
   {
@@ -275,7 +276,7 @@
    "source": [
     "# Choose a cutoff value and create a list of application types to be replaced\n",
     "# use the variable name `application_types_to_replace`\n",
-    "#  YOUR CODE GOES HERE\n",
+    "application_types_to_replace = list(app_type_counts[app_type_counts < 500].index)\n",
     "\n",
     "# Replace in dataframe\n",
     "for app in application_types_to_replace:\n",
@@ -314,7 +315,8 @@
    ],
    "source": [
     "# Look at CLASSIFICATION value counts to identify and replace with \"Other\"\n",
-    "#  YOUR CODE GOES HERE"
+    "class_counts = application_df['CLASSIFICATION'].value_counts()\n",
+    "print(class_counts)"
    ]
   },
   {
@@ -380,7 +382,7 @@
    ],
    "source": [
     "# You may find it helpful to look at CLASSIFICATION value counts >1\n",
-    "#  YOUR CODE GOES HERE"
+    "print(class_counts[class_counts > 1])"
    ]
   },
   {
@@ -408,7 +410,7 @@
    "source": [
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
     "# use the variable name `classifications_to_replace`\n",
-    "#  YOUR CODE GOES HERE\n",
+    "classifications_to_replace = list(class_counts[class_counts < 1000].index)\n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
@@ -425,7 +427,7 @@
    "outputs": [],
    "source": [
     "# Convert categorical data to numeric with `pd.get_dummies`\n",
-    "#  YOUR CODE GOES HERE"
+    "application_df = pd.get_dummies(application_df)"
    ]
   },
   {
@@ -435,10 +437,11 @@
    "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "#  YOUR CODE GOES HERE\n",
+    "X = application_df.drop(columns=['IS_SUCCESSFUL'])\n",
+    "y = application_df['IS_SUCCESSFUL']\n",
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
-    "#  YOUR CODE GOES HERE"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -496,18 +499,18 @@
    ],
    "source": [
     "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
-    "#  YOUR CODE GOES HERE\n",
+    "input_shape = (X_train_scaled.shape[1],)\n",
     "\n",
     "nn = tf.keras.models.Sequential()\n",
     "\n",
     "# First hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=64, activation='relu', input_shape=(X_train_scaled.shape[1],)))\n",
     "\n",
     "# Second hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=32, activation='relu'))\n",
     "\n",
     "# Output layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation='sigmoid'))\n",
     "\n",
     "# Check the structure of the model\n",
     "nn.summary()"
@@ -530,7 +533,7 @@
    ],
    "source": [
     "# Compile the model\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
@@ -747,7 +750,7 @@
    ],
    "source": [
     "# Train the model\n",
-    "#  YOUR CODE GOES HERE"
+    "history = nn.fit(X_train_scaled, y_train, epochs=100, batch_size=32, validation_split=0.2)"
    ]
   },
   {
@@ -777,7 +780,7 @@
    "outputs": [],
    "source": [
     "# Export our model to HDF5 file\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.save(\"file_name.h5\")"
    ]
   }
  ],
